--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta 
+      property="Product:image" 
+      content="https://z3.ax1x.com/2021/05/06/glm0p9.jpg"
+    />
     <title>Andy</title>
   </head>
   <body style="margin: 0;">
